# Flow.Launcher.Plugin.Radio

./: README.md  main.py  plugin.json  pyproject.toml  requirements.txt
.github/: Publish Release.yaml
.github/workflows/: Publish Release
plugin/: channels.py  player.py  radio.py  settings.json  stream.py
